# tuvi-battu-graphrag

./: .env.example  .gitignore  CHUNK_SPEC.md  PLAN.md  PROGRESS.md  README.md  SPECIFICATIONS.md
backend/: .env.example  LASOTUVI_SETUP.md  LASOTUVI_USAGE.md  pyproject.toml  requirements-kaggle.txt  requirements.txt  setup_lasotuvi.ps1  setup_lasotuvi.sh
backend/app/: clients.py  config.py  main.py
backend/app/models/: chart.py  lasotuvi_models.py
backend/app/rag/: __init__.py  ablation.py  chart_facts.py  citations.py  config.py  context.py  diagnostics.py  evaluation.py  evaluation_checkpoint.py  gemini_keys.py  generation.py  graph.py  house_ontology.py  nodes.py  planner.py  prompt_templates.py  ranking.py  (+5 more)
backend/docs/: chart-schema.md  tuvi-real-example.json
backend/tests/: test_audit_w3_ingest_07.py  test_chat_route.py  test_chunk_text.py  test_embed_chunks.py  test_evaluation_checkpoint.py  test_evaluation_runner_resilience.py  test_experiment_config.py  test_extract_entities.py  test_import_artifacts.py  test_lasotuvi_service.py  test_rag_ablation.py  test_rag_chart_facts.py  test_rag_context_generation_citations.py  test_rag_diagnostics.py  test_rag_dry_run.py  test_rag_evaluation.py  test_rag_planner.py  test_rag_query_processing.py  test_rag_ranking.py  test_rag_retrieval.py  test_rag_role_retrieval.py  test_run_eval_cli.py  test_run_w3_ingest_07.py  test_runtime_embedding_service.py  test_runtime_gemini_keys.py  test_smoke_retrieval.py  test_tuvi_engine.py  test_w6_abl_03_chunk_coverage.py  test_w8_retrieval_matrix.py  test_write_graph_provenance.py
(+458 files in other folders)
