[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tuvi-backend"
version = "0.1.0"
description = "FastAPI backend for TuVi GraphRAG"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "google-generativeai",
  "google-genai",
  "langgraph",
  "uvicorn[standard]",
  "python-dotenv",
  "neo4j",
  "pydantic",
  "psycopg[binary]",
  "pytest",
  "PyYAML",
  "requests",
  "supabase",
  "pymupdf",
  "ephem>=3.7.6.0"
]

[project.optional-dependencies]
tuvi = [
  "ephem>=3.7.6.0"
]
